--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Mount Sion CBS Secondary School</title>
     <link href="./assets/favicon.ico" rel="icon" type="image/x-icon">
     <link href="semantic/out/semantic.min.css" rel="stylesheet" type="text/css">
